--- a/youtybe.html
+++ b/youtybe.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="Styles/sidebar.css">
 </head>
 <body>
+  <div></div>
   <header class="header">
     <div class="left-section">
       <img class="Menu" src="Icons/hamburger-menu.svg">
